JavaScript - změna obrázku

--- a/pvy/01/index.html
+++ b/pvy/01/index.html
@@ -22,6 +22,8 @@
         </header>
         <main class="container">
             <h2>První nadpis</h2>
+            <p><button id="mocnina">Mocnina</button></p>
+            <p class="well" id="vysledek">Výsledek</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur itaque iure consectetur ullam placeat, commodi eveniet dolores vitae, doloribus blanditiis adipisci, perspiciatis amet nostrum dicta eum! Odit, assumenda dolorem! Laboriosam tempora id dolorum, excepturi ea eius impedit? Id eaque at expedita, quisquam fuga suscipit ipsa a accusamus dolorum quae. Eius.</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora rerum enim, totam sint, cupiditate alias modi ex expedita architecto animi commodi fugit sunt, inventore deserunt blanditiis obcaecati. Officiis amet porro tempora! Dolorum eum officiis ex nobis, doloremque harum iusto expedita ab laudantium obcaecati numquam? Enim nobis quidem nostrum. Facere molestiae distinctio mollitia obcaecati natus enim nam aliquam sit repellendus asperiores accusantium amet at culpa quae illo minima, ullam cum inventore voluptates beatae unde officiis. Ea explicabo porro aliquam temporibus repellat. Ex quaerat nihil dolorem officia voluptates laboriosam, tempora ullam cupiditate perspiciatis voluptas laborum, vero temporibus pariatur modi non, perferendis veritatis!</p>
             <hr>
@@ -36,7 +38,7 @@
             <hr>
             <h2>Třetí nadpis</h2>
             <figure>
-                <img src="img/shrek.jpg" alt="Shrek">
+                <img id="shrek" src="img/shrek1.jpg" alt="Shrek">
                 <figcaption>To je Shrek</figcaption>
             </figure>
         </main>
